--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,18 @@
               </div>
           </div>
       </header>
+          <nav class="navbar navbar-expand-lg">
+        <p class="Logo">Navbar</p>
+        <input type="checkbox" name="" class="btn" />
+        <div class="nav">
+          <ol>
+            <li><a href="#">Home</a> </li>
+            <li><a href="#">About</a> </li>
+            <li><a href="#">Products</a> </li>
+            <li><a href="#">Contact</a> </li>
+          </ol>
+        </div>
+      </nav>
       </main>
     </body>
 </html>
